feat: update readme

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,16 @@
 [package]
-name = "woff2"
+name = "woff2-patched"
 version = "0.3.0"
-authors = ["Brian Hanechak <brianh@cimpress.com>", "Emily Crandall Fleischman <emily.fleischman@cimpress.com>"]
+authors = [
+    "Brian Hanechak <brianh@cimpress.com>",
+    "Emily Crandall Fleischman <emily.fleischman@cimpress.com>",
+    "Zimon Tai <daizhuoxian@gmail.com>",
+]
 edition = "2021"
 license = "Apache-2.0"
 keywords = ["woff2", "font", "parse"]
-description = "WOFF2 decompression library"
-repository = "https://github.com/Cimpress-MCP/woff2-rs"
+description = "WOFF2 decompression library, forked with some fixes"
+repository = "https://github.com/zimond/woff2-rs"
 readme = "readme.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
